--- a/integration-test/eureka/src/main/resources/application.properties
+++ b/integration-test/eureka/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=eureka
 server.port=8761
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
+eureka.server.useReadOnlyResponseCache=false
+eureka.server.responseCacheAutoExpirationInSeconds=5
+eureka.server.renewalPercentThreshold=0.0
+eureka.server.waitTimeInMsWhenSyncEmpty=0
