--- a/integration-test/gateway/src/main/resources/application.properties
+++ b/integration-test/gateway/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.application.name=gateway
 server.port=8080
 eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE}
 eureka.instance.prefer-ip-address=true
+eureka.client.registryFetchIntervalSeconds=3
+eureka.client.initialInstanceInfoReplicationIntervalSeconds=0
+eureka.client.instanceInfoReplicationIntervalSeconds=3
+eureka.client.eurekaServiceUrlPollIntervalSeconds=5
+eureka.instance.leaseRenewalIntervalInSeconds=5
+eureka.instance.leaseExpirationDurationInSeconds=10
