--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -3,7 +3,15 @@ name: Integration Test
 on:
   push:
     branches: [ main ]
+    paths:
+      - "client/**"
+      - "integration-test/**"
+      - ".github/workflows/integration-test.yml"
   pull_request:
+    paths:
+      - "client/**"
+      - "integration-test/**"
+      - ".github/workflows/integration-test.yml"
 
 jobs:
   integration-test:
