Change leading go.mod to be located in project root

--- a/integration-test/go-client/Dockerfile
+++ b/integration-test/go-client/Dockerfile
@@ -1,7 +1,6 @@
 FROM golang:1.24.5-alpine3.22
 WORKDIR /app
 COPY . .
-RUN ls -la /app && ls -la /app/client || true
-RUN go build -mod=vendor -o client
+RUN go build -mod=vendor -o client ./cmd/client.go
 EXPOSE 8080
 CMD ["./client"]
