--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,8 +32,7 @@ jobs:
           go-version: 1.24.5
           check-latest: true
           cache: true
-          cache-dependency-path: |
-            client/go.sum
+          cache-dependency-path: go.sum
 
       - name: Verify module
         run: |
